--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
           <ul class="navbar-nav mr-auto justify-content-center">
 
             <li class="nav-item">
-              <a class="nav-link" href="https://calendly.com/rodivan2795/45min">Metodología</a>
+              <a class="nav-link" href="#method">Metodología</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./servicios/productos.html">Contacto</a>
+              <a class="nav-link" href="./Blog/blogpost1.html">Blog</a>
             </li>
 
            </div>
@@ -106,11 +106,13 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
 <main>
 
 <section>
+
   <div class="banner">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6 text-center justify-content-center" id="BannerTitle">
         <h1>Creamos Soluciones En la Web</h1>
          <h4 class="subheading">Que se adaptan a <span class="Ti">Ti</span></h4>
+         <a href="#" class="btn btn-primary"><i class="fab fa-whatsapp">Hablemos</i></a>
       </div>
       <div class="col-sm-6">
         <img src="./resources/multimedia/BannerImage.svg" class="img-fluid" alt="Responsive image">
