--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
 </header>
 <main>
 
-<section>
+<section class="portada">
 
   <div class="banner">
     <div class="row">
