--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141901890-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -81,7 +81,7 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./Blog/blogpost1.html">Blog</a>
+              <a class="nav-link" href="./Blog/raulmoreno.html">Blog</a>
             </li>
 
            </div>
@@ -98,93 +98,32 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
           </div>
         </li>
       </div>
-
       </nav>
-        </nav>
+      </nav>
 
 </header>
 <main>
-
-<section class="portada">
-
-  <div class="banner">
-    <div class="row">
-      <div class="col-sm-6 text-center justify-content-center" id="BannerTitle">
-        <h1>Creamos Soluciones En la Web</h1>
-         <h4 class="subheading">Que se adaptan a <span class="Ti">Ti</span></h4>
-         <a href="#" class="btn btn-primary"><i class="fab fa-whatsapp">Hablemos</i></a>
-      </div>
-      <div class="col-sm-6">
-        <img src="./resources/multimedia/BannerImage.svg" class="img-fluid" alt="Responsive image">
-      </div>
-    </div>
+  <section>
+    <div class="card" style="width: 18rem;">
+  <img src="./resources/multimedia/BannerImage.svg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Servicios IT</h5>
+    <p class="card-text"></p>
+    <a href="#" class="btn btn-primary btn-lg btn-block">Servicios</a>
   </div>
-</section>
-<section class="text-center angle">
-  <a href="#como"><i class="fas fa-angle-down fa-3x"></i></a>
-</section>
-<section class="como" id="como">
-  <h1 class="text-center">Como?</h1>
-</section>
-
-<section>
-  <div class="method" id="method">
-    <div class="row">
-      <div class="col-sm-6">
-        <img src="./resources/multimedia/Etapas.svg" class="img-fluid" alt="Responsive image">
-      </div>
-      <div class="col-sm-6">
-        <ul class="caracteristicas">
-          <li>1. Diseño de experiencia:</li><p>Desarrollamos ideas innovadoras que agreguen valor.</p>
-          <li>2. Desarrollo web:</li><p>Creamos aplicaciones web utilizando la mejores practicas.</p>
-          <li>3. Pruebas de usabilidad:</li><p>Probamos el desarrollo web con usuarios reales y medimos los resultados.</p>
-          <li>4. Mejoras continuas:</li><p>Analizamos los resultados de las pruebas y realizamos mejoras y desarrollos nuevos en base a los resultados.</p>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-</section>
-
-<section class="text-center angle">
-  <a href="#proyectos"><i class="fas fa-angle-down fa-3x"></i></a>
-</section>
-
-<section>
-  <img src="./resources/multimedia/Dot element.svg" class="img-fluid" alt="Responsive image">
-</section>
-
-
-<section>
-
-  <div class="row text-center" >
-    <div class="col-sm-12" id="proyectos">
-      <h2>Proyectos</h2>
-    </div>
-  </div>
-
-  <div class="row text-center">
-    <div class="col-sm-12">
-    <img src="./resources/multimedia/IconsaLogo.png" height="180px" width="243px" alt="responsive image" class="img-thumbnail">
-    <img src="./resources/multimedia/AIRCO.svg" height="200px" width="263px" alt="responsive image" class="img-thumbnail">
-    <img src="./resources/multimedia/AseguraLogo.png" height="200px" width="263px" alt="responsive image" class="img-thumbnail">
-    <img src="./resources/multimedia/eac.png" height="200px" width="263px" alt="responsive image" class="img-thumbnail">
-    </div>
-  </div>
-
-
-
-</section>
-
-
-
-
-
-
-
-
-
+</div>
+  </section>
 </main>
+
+
+
+
+
+
+
+
+
+
 
 <footer class="footer">
   <div class="card">
